sip4 (4.16.5+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Refresh patches.
  * Drop configure.py.patch, no longer needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 24 Dec 2014 21:40:44 +0300

sip4 (4.16.4+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Include full copy of SIP license in debian/copyright.
  * Bump Standards-Version to 3.9.6, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 24 Oct 2014 10:07:59 +0400

sip4 (4.16.3+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Update my e-mail address.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 13 Sep 2014 12:53:42 +0400

sip4 (4.16.2+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release
    - Refreshed patches

 -- Scott Kitterman <scott@kitterman.com>  Fri, 04 Jul 2014 11:15:21 -0400

sip4 (4.16.1+dfsg-1) unstable; urgency=medium

  * New upstream bugfix release.
  * Update sip.1 man page, document new command-line flags.

 -- Dmitry Shachnev <mitya57@gmail.com>  Mon, 09 Jun 2014 15:56:52 +0400

sip4 (4.16+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Bump API version to 11.1 (keep 11.0 in provided versions).
  * Update debian/copyright to copyright-format 1.0.
  * Add Files-Excluded field to remove HTML documentation, which
    contains sourceless minified jquery.
  * Simplify debian/watch, and mangle dfsg version.
  * Add get-orig-source target to debian/rules.

 -- Dmitry Shachnev <mitya57@gmail.com>  Sun, 01 Jun 2014 12:38:17 +0400

sip4 (4.15.5-2) unstable; urgency=medium

  * Upload to unstable

 -- Scott Kitterman <scott@kitterman.com>  Fri, 09 May 2014 07:48:12 -0400

sip4 (4.15.5-1) experimental; urgency=low

  * New upstream release.
  * Bump API version to 11.0.
  * debian/rules: Drop Python 2.5 compatibility code.

 -- Dmitry Shachnev <mitya57@gmail.com>  Tue, 18 Mar 2014 10:40:51 +0400

sip4 (4.15.4-1) unstable; urgency=low

  * New upstream bugfix release.