@@ -78,7 +78,6 @@ clean:
 	dh_testdir
 	dh_testroot
 	rm -rf *-stamp siputils.pyc __pycache__ $(PYTHONS:%=build-%) $(PYTHONS:%=dbg-build-%)
-	rm -rf $(CURDIR)/siplib/sip.h $(CURDIR)/siplib/siplib.c $(CURDIR)/siplib/siplib.sbf
 	cp $(CURDIR)/debian/sipconfig_py3.header $(CURDIR)/debian/sipconfig_py3.py
 	rm -rf $(CURDIR)/debian/sipconfig_py3.py.tmp
 	rm -rf $(CURDIR)/sipconfig-3.*
@@ -121,7 +120,7 @@ install-arch-3.%:
 	install -m 644 -o root -g root build-3.$*/sipconfig.py debian/python3-sip/usr/lib/python3.$*/dist-packages/sipconfig_nd$*.py
 	mv debian/python3-sip-dbg/usr/lib/python3.$*/dist-packages/sipconfig.py debian/python3-sip-dbg/usr/lib/python3/dist-packages/sipconfig_d$*.py
 	mkdir -p debian/python3-sip-dev/usr/include/python3.$*m
-	install -m 644 -o root -g root siplib/sip.h debian/python3-sip-dev/usr/include/python3.$*m/
+	install -m 644 -o root -g root build-3.$*/siplib/sip.h debian/python3-sip-dev/usr/include/python3.$*m/
 	mkdir -p debian/python3-sip-dev/usr/include/python3.$*dm
 	ln -s ../python3.$*m/sip.h \
 	    debian/python3-sip-dev/usr/include/python3.$*dm/sip.h
@@ -136,7 +135,7 @@ install-arch-2%:
 	install -m 644 -o root -g root build-2$*/sipconfig.py debian/python-sip/usr/lib/python2$*/dist-packages/sipconfig_nd.py
 	install -m 644 -o root -g root dbg-build-2$*/sipconfig.py debian/python-sip-dbg/usr/lib/python2$*/dist-packages/sipconfig_d.py
 	mkdir -p debian/python-sip-dev/usr/include/python2$*
-	install -m 644 -o root -g root siplib/sip.h debian/python-sip-dev/usr/include/python2$*/
+	install -m 644 -o root -g root build-2$*/siplib/sip.h debian/python-sip-dev/usr/include/python2$*/
 	mkdir -p debian/python-sip-dev/usr/include/python2$*_d
 	ln -s ../python2$*/sip.h \
 	    debian/python-sip-dev/usr/include/python2$*_d/sip.h
